# owl

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  install.sh  package.json  pyproject.toml
.claude-plugin/: plugin.json
.omc/: project-memory.json
docs/: ATLAS.md  CHANGELOG.md  REZERO-2026-04-18.md  agent-brain-structure-v1.md  agent-cli-doc-first-operating-principle-v0.md  agent-cli-operating-principle-summary-v0.md  bench-2026-04-17-rc1-naming.md  bench-2026-04-17-rc1.md  bench-design-2026-04-18.md  bench-gold-qa-v0.md  benchmark-v0.md  benchmark-v1.md  benchmark-v2-results.md  benchmark-v2.md  benchmark-v3-results.md  benchmark-v4-results.md  benchmark-v6-results.md  channel-closure-readiness-note-v0.md  cli-llm-handoff-v0.md  compiled-format-spec-v0.md  discord-channel-ingest-plan-v0.md  dkb-migration-plan-v0.md  doc-first-application-example-v0.md  doc-first-operating-principle-v0.md  doc-first-template-v0.md  experiment-3way-2026-04-17.md  folder-policy-v0.md  health-check-spec-v0.md  health-triage-playbook-v0.md  incremental-maintenance-spec-v0.md  index-and-backlink-spec-v0.md  ingest-contract-v2.md  karpathy-checklist-audit-v1.md  karpathy-gap-check-v0.md  karpathy-ingest-rules-v0.md  kib-spec-v0.md  legacy-plan-next.md  lks-kib-mdv-spec-v0.md  llm-maintained-wiki-principle-v0.md  long-term-exploration-v0.md  (+34 more)
docs/first-principles/: equation-first.md
docs/source/: karpathy-llm-knowledge-bases-en.md  karpathy-llm-knowledge-bases-ko.md
plans/: 2026-04-08-github-release-and-llm-tool-reorientation-v0.md  2026-04-08-post-backronym-cleanup-v0.md  2026-04-08-post-finishing-continuation-v0.md  2026-04-08-post-v010-remaining-work-v0.md  sample-compile-report-2026-04-08-v0.md
plugin/: CLAUDE.md
plugin/scripts/: bootstrap.sh  install.sh  uninstall.sh
plugins/gemini/: gemini-extension.json
plugins/hermes/skills/omb-compile/: SKILL.md
plugins/hermes/skills/omb-health/: SKILL.md
plugins/hermes/skills/omb-ingest/: SKILL.md
plugins/hermes/skills/omb-search/: SKILL.md
plugins/hermes/skills/omb-setup/: SKILL.md
plugins/hermes/skills/omb-update/: SKILL.md
plugins/openclaw/: index.js  package.json
plugins/opencode/: index.js  package.json
skills/omb-compile/: SKILL.md
skills/omb-health/: SKILL.md
skills/omb-ingest/: SKILL.md
skills/omb-search/: SKILL.md
skills/omb-setup/: SKILL.md
skills/omb-update/: SKILL.md
src/: brain_health_check.py  wiki_search.py
src/owl/: cli.py  config.py  health.py  hooks.py  ingestcmd.py  initcmd.py  search.py  setupcmd.py  statuscmd.py  vault.py
src/owl/claude_assets/agents/: owl-compiler.md  owl-health.md  owl-librarian.md
src/owl/claude_assets/commands/: owl-file.md  owl-health.md  owl-ingest.md  owl-query.md  owl-search.md
tools/: audit_c.py  benchmark_vault.py  drift_audit.sh  endpoints.example.conf  fix_double_date.py  fix_sources.py  migrate_a.py  refusal_rate_probe.sh  wiki_lint.py
vault/akasha/scripts/: populate_from_facet_lattice.py
vault/akasha/src/akasha/: __init__.py  aliases.py  cli.py  indexcmd.py  ingestcmd.py  initcmd.py  searchcmd.py  vault.py
vault/capsule/: README.md  pyproject.toml
vault/capsule/src/capsule/: buildcmd.py  cli.py  registry.py  searchcmd.py  statuscmd.py
vault/capsule/src/capsule/assets/: build-hermes.mjs  build-openclaw.mjs  lib-hermes.mjs  lib-openclaw.mjs  verify-hermes.mjs  verify-openclaw.mjs
vault/omb/: pyproject.toml
vault/omb/src/omb/: __init__.py  cli.py  validator.py  vault_ops.py  wiki_ops.py
views/akasha/: pyproject.toml
views/akasha/src/akasha/: compiler.py  entry.py  graph.py  healthcmd.py  statuscmd.py
views/cairn/: pyproject.toml
views/cairn/src/cairn/: __init__.py  cli.py  entry.py  indexcmd.py  initcmd.py  searchcmd.py  statuscmd.py  vault.py
views/facet/: pyproject.toml
views/facet/scripts/: migrate_edges_from_rehalf.py
views/facet/src/facet/: __init__.py  aliases.py  cli.py  compilecmd.py  entry.py  healthcmd.py  indexcmd.py  initcmd.py  searchcmd.py  statuscmd.py  vault.py
views/lattice/: pyproject.toml
views/lattice/src/lattice/: __init__.py  cli.py  entry.py  healthcmd.py  indexcmd.py  initcmd.py  manifold.py  searchcmd.py  statuscmd.py  vault.py
views/omb/src/omb/: cli.py
views/owl/: AGENTS.md  install.sh  pyproject.toml
views/owl/docs/: agent-cli-operating-principle-summary-v0.md  channel-closure-readiness-note-v0.md  doc-first-application-example-v0.md  doc-first-operating-principle-v0.md  external-knowledge-integration-v0.md  folder-policy-v0.md  health-triage-playbook-v0.md  karpathy-gap-check-v0.md  karpathy-ingest-rules-v0.md  lks-kib-mdv-spec-v0.md  long-term-exploration-v0.md  mdv-profile-spec-v0.md  meta-governance-source-spec-v0.md  multi-machine-setup-v0.md  obsidian-ingest-spec-v0.md  openclaw-reflection-log-v0.md  operating-principles-index-v0.md  operational-layer-spec-v0.md  output-format-spec-v0.md  reference-rules-from-songdori-v0.md  sample-ingest-candidates-v0.md  term-dictionary-v0.md
views/owl/docs/first-principles/: equation-first.md
views/owl/plans/: 2026-04-08-finishing-touches-v0.md  2026-04-08-github-release-and-llm-tool-reorientation-v0.md  openclaw-skill-structure-principles-2026-04-04.md  phase-l1-compile-report-2026-04-08-v0.md  phase-l2-n-headers-report-2026-04-08-v0.md
views/owl/src/owl/: __init__.py  cli.py  initcmd.py  search.py  setupcmd.py  statuscmd.py
views/owl/src/owl/claude_assets/agents/: owl-compiler.md  owl-health.md  owl-librarian.md
views/owl/src/owl/claude_assets/commands/: owl-compile.md  owl-promote.md
views/owl/src/owl/claude_assets/vault-template/: CLAUDE.md  settings.json
views/wiki/docs/: wiki-view-spec.md
