[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha"
version = "0.1.0"
description = "akasha — unified brain view. Flat entries + LLM-compiled narratives + graph expansion. LLM-first retrieval."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Luca" }]
license = { text = "MIT" }
keywords = ["llm", "knowledge-base", "atomic", "akasha", "graph", "compiled"]
dependencies = ["anthropic>=0.40.0"]

[project.scripts]
akasha = "akasha.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["akasha*"]
