[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.0.1"
description = "cairn — an LLM-first knowledge base. Atomic claims, flat directory, INDEX-driven retrieval. Sideline experiment parallel to owl."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Luca" }]
license = { text = "MIT" }
keywords = ["llm", "knowledge-base", "atomic", "cairn"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
cairn = "cairn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cairn*"]

[tool.setuptools.package-data]
cairn = [
    "vault-template/*",
    "vault-template/**/*",
]
