[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facet"
version = "0.1.0"
description = "facet — shard-aware LLM knowledge base with alias resolution. Evolution of cairn with ALIASES.tsv and per-shard _index.md."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Luca" }]
license = { text = "MIT" }
keywords = ["llm", "knowledge-base", "atomic", "facet", "shard"]

[project.scripts]
facet = "facet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["facet*"]
