[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice"
version = "0.1.0"
description = "lattice — graph-augmented LLM knowledge base with BLOOM/MANIFOLD indexing. Entries linked via edges for 1-hop graph expansion."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Luca" }]
license = { text = "MIT" }
keywords = ["llm", "knowledge-base", "atomic", "lattice", "graph", "manifold"]

[project.scripts]
lattice = "lattice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lattice*"]
